bin_PROGRAMS = test nw_example nw_bench display_diff_example hirschberg_bench lcs_example
test_SOURCES = test.cpp
nw_example_SOURCES = nw_example.cpp
nw_bench_SOURCES = nw_bench.cpp
display_diff_example_SOURCES = display_diff_example.cpp
hirschberg_bench_SOURCES = hirschberg_bench.cpp
lcs_example_SOURCES = lcs_example.cpp